Make sure links in notifications are legible

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,3 +1,4 @@
+$bodytext: #444;
 $primary: #009E7F;
 $grey: #ddd;
 $off-grey: #71B8AA;
